css position fix for invisible score manipulation inputs

--- a/digifoos.scss
+++ b/digifoos.scss
@@ -6,6 +6,7 @@ body {
   width: 600px;
   margin: 0 auto;
   margin-top: 100px;
+  position: relative;
 
   .title {
     font-size: 60px;
